Agregar productos y visualizar su tiempo

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="./src/index.css">
     <title>Vite + React</title>
   </head>
-  <body class="m-0 flex min-w-[320px] min-h-[100vh] bg-fuchsia-50">
-    <div id="root" class="w-full"></div>
+  <body class="m-0 flex min-w-[320px] min-h-[100vh] bg-black">
+    <div id="root" class="w-full grid place-items-center"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
